<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollViewBody"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_gravity="top">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/publish_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/title"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/publish_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="3" />

        <CheckBox
            android:id="@+id/publish_allow_derivatives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow_derivatives" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/allow_derivatives_description"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/publish_locked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locked" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="-5dp"
            android:text="@string/locked_description"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
</ScrollView>
