<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollViewBody"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seconds"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.bithack.principia.shared.NumberPicker
                android:id="@+id/timer_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

            </com.bithack.principia.shared.NumberPicker>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milliseconds"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.bithack.principia.shared.NumberPicker
                android:id="@+id/timer_milliseconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_ticks"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.bithack.principia.shared.NumberPicker
                android:id="@+id/timer_num_ticks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_ticks_descr"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

    </LinearLayout>

        <CheckBox
            android:id="@+id/timer_use_system_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_system_time" />

    </LinearLayout>






</ScrollView>
