<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/wv_ll"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/wv_close"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/close" />

        <ProgressBar
            android:id="@+id/wv_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/wv_close"
            android:visibility="gone" />

        <TextView
            android:id="@+id/wv_progresstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/wv_progress"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone" />

        <Button
            android:id="@+id/wv_reload"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/reload" />

    </RelativeLayout>

</LinearLayout>
