<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollViewBody"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/effect_1" />

            <Spinner
                android:id="@+id/fx_1"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:entries="@array/effects" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/effect_2" />

            <Spinner
                android:id="@+id/fx_2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:entries="@array/effects" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/effect_3" />

            <Spinner
                android:id="@+id/fx_3"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:entries="@array/effects" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/effect_4" />

            <Spinner
                android:id="@+id/fx_4"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:entries="@array/effects" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/radius"/>

            <SeekBar
                android:id="@+id/seekbar_radius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.25"
                android:max="39"
                android:progress="0" />

            <TextView
                android:id="@+id/tv_radius"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.75"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/count"/>

            <SeekBar
                android:id="@+id/seekbar_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.25"
                android:max="19"
                android:progress="0" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.75"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/interval"/>

            <SeekBar
                android:id="@+id/seekbar_interval"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.25"
                android:max="19"
                android:progress="0" />

            <TextView
                android:id="@+id/tv_interval"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.75"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

    </TableLayout>
</ScrollView>
