<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollViewBody"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_gravity="top">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="8dp" >

            <TextView
                android:id="@+id/polygon_sd_left"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/sublayer_depth"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <SeekBar
                android:id="@+id/polygon_sublayer_depth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/polygon_sublayer_depth_tv"
                android:layout_toRightOf="@+id/polygon_sd_left"
                android:max="3" />

            <TextView
                android:id="@+id/polygon_sublayer_depth_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/NA"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>

        <CheckBox
            android:id="@+id/polygon_front_align"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/front_align" />

    </LinearLayout>
</ScrollView>
